Fix logo overlapping issue
Fix style issue

--- a/css/home.css
+++ b/css/home.css
@@ -104,7 +104,7 @@
 
 @media (min-width: 992px) {
   .logo {
-    padding: 4rem 19%;
+    padding: 7.8vh 19%;
   }
 
   .logo img {
@@ -113,12 +113,10 @@
 
   .core-content {
     padding: 0 0 0 19%;
-    width: 70.5%;
-    max-width: 645px;
-    position: absolute;
-    top: 51%;
-    transform: translateY(-50%);
+    width: 80%;
+    max-width: 625px;
     text-align: left;
+    margin: 0;
   }
 
   .core-content h1 {
@@ -127,5 +125,11 @@
 
   #error-message {
     padding-left: 2.2rem;
+  }
+}
+
+@media (max-height: 625px) and (min-width: 992px) {
+  .core-content h1 {
+    font-size: 3.6rem;
   }
 }
